pkg/k8s/kustomize/subnet-operator-ip/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator-ip
  namespace: subnet-services
  labels:
    app.kubernetes.io/name: ip
    app.kubernetes.io/instance: ip-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ip
      app.kubernetes.io/instance: ip-service
      app.kubernetes.io/component: operator
      app.kubernetes.io/part-of: provider
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ip
        app.kubernetes.io/instance: ip-service
        app.kubernetes.io/component: operator
        app.kubernetes.io/part-of: provider
    spec:
      serviceAccountName: operator-ip
      containers:
        - name: operator-ip
          image: u2udepin/subnet-node:latest
          command:
            - "./subnet"
          imagePullPolicy: Always
          args: ["k8s-services", "operator", "ip"]
          ports:
            - name: rest
              containerPort: 8080
