pkg/k8s/kustomize/subnet-operator-ip/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operator-ip
  namespace: subnet-services
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
  labels:
    app.kubernetes.io/name: ip
    app.kubernetes.io/instance: ip-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  ingressClassName: "subnet-ingress-class"
  rules:
    - host: subnet-operator-ip.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operator-ip
                port:
                  name: rest
